--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,89 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  background-color: #E3F2FD;
+  font-family: helvetica;
+}
+#root {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;				
+}
+p {
+  text-align: center;
+  font-size: 10px;
+}
+table {
+  border: 3px solid #000;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+}
+td {
+  border: 1px solid #000;
+  width: 50px;
+  height: 50px;				
+}	
+input {
+  background-color: #fff;
+  height: 50px;
+  width: 50px;
+  border: 0px;				
+  text-align: center;
+  font-size: 20px;
+  margin-right: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+}
+button {
+  font-weight: bold;
+  text-align: center;
+  background-color: #0277BD;
+  color: #FAFAFA;
+  border:none;
+  border-radius: 2px;
+  margin-top: 20px;
+  margin-right: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+button:disabled {
+  opacity: 0.2;
+}			
+button.clear {
+  border-radius: 100px;
+  color: black;
+  background-color: #D32F2F;
+}
+button.undo {
+  border-radius: 100px;
+  color: black;
+  background-color: #FBC02D;
+}			
+button.solve {
+  background-color: #4CAF50;
+}
+button.check {
+  background-color: #03A9F4;
+}
+.footnote{
+  margin-top: 50px;
+}
+.fixed {
+  font-weight: bold;
+  color: #000;
+}
+.result {
+  color: gray;
+}
+.solved-appear {
+  opacity: 0.01;
+}			
+.solved-appear.solved-appear-active {
+  opacity: 1;
+  transition: opacity 200ms ease-in;
+}	
